更新页面链接及其他信息â

--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -61,7 +61,7 @@
                 <h4 class="ui inverted header ui inverted header m-text-thin m-text-spaced">联系我</h4>
                 <div class="ui inverted link list">
                     <a href="#" class="item">Email:2793989872@qq.com</a>
-                    <a href="#" class="item">VX:Cloud_v-587</a>
+                    <a href="#" class="item">VX:18611601393</a>
                     <a href="#" class="item">QQ:2793989872</a>
                 </div>
             </div>
@@ -69,12 +69,12 @@
                 <h4 class="ui inverted header m-text-thin m-text-spaced">Blog</h4>
                 <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的第一个博客，欢迎您的来临！！！</p>
                 <br>
-                <a href="http://blog.wxybyr.cloud/admin" class="item" target="_blank">后台管理</a>
+                <a href="http://82.157.117.195:8080/admin" class="item" target="_blank">后台管理</a>
             </div>
         </div>
         <div class="ui inverted section divider"></div>
         <br><div style="color: turquoise;margin-top: -18px" class="ui inverted m-text-thin m-text-spaced">我的博客已运行：<span id="htmer_time" class="item m-text-thin"></span> (*๓´╰╯`๓)</div>
-        <br><p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright ©2021-2022 This Blog by wxy</p>
+        <br><p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright ©2021-2022 This Blog by Wxy</p>
     </div>
     <script>
         // 运行时间统计
@@ -106,7 +106,7 @@
         }
         function setTime() {
             /*此处为网站的创建时间*/
-            var create_time = Math.round(new Date(Date.UTC(2021, 05, 01, 10, 00, 00)).getTime() / 1000);
+            var create_time = Math.round(new Date(Date.UTC(2021, 0o5, 0o1, 10, 0o0, 0o0)).getTime() / 1000);
             var timestamp = Math.round((new Date().getTime() + 8 * 60 * 60 * 1000) / 1000);
             currentTime = secondToDate((timestamp - create_time));
             currentTimeHtml = currentTime[0] + '年' + currentTime[1] + '天'
