--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -160,8 +160,8 @@
           <div class="ui header">关于我</div>
         </div>
         <div class="ui attached segment">
-          <p class="m-text">王翔云，一名bupt研究生,往返于0和1的世界</p>
-          <p class="m-text">座右铭：仰望星空的同时也要脚踏实地</p>
+          <p class="m-text">Wxy，一名bupt研究生,往返于0和1的世界</p>
+          <p class="m-text">座右铭：仰望星空的同时也要脚踏实地 ~ Less is more</p>
           <p class="m-text">吃喝玩乐乃人生第一大兴趣</p>
         </div>
         <div class="ui attached segment">
@@ -178,7 +178,7 @@
         </div>
         <div class="ui bottom attached segment">
           <a href="https://github.com/childrenadd" target="_blank" class="ui circular icon button"><i class="github icon"></i></a>
-          <a href="#" class="ui wechat circular icon button" data-content="Cloud_v-587" data-position="bottom center"><i class="weixin icon"></i></a>
+          <a href="#" class="ui wechat circular icon button" data-content="18611601393" data-position="bottom center"><i class="weixin icon"></i></a>
           <a href="#" class="ui qq circular icon button " data-content="2793989872" data-position="bottom center"><i class="qq icon"></i></a>
         </div>
         </div>
