--- a/src/main/resources/templates/admin/_fragments.html
+++ b/src/main/resources/templates/admin/_fragments.html
@@ -56,7 +56,7 @@
                         <h4 class="ui inverted header ui inverted header m-text-thin m-text-spaced">联系我</h4>
                         <div class="ui inverted link list">
                             <a href="#" class="item">Email:2793989872@qq.com</a>
-                            <a href="#" class="item">VX:Cloud_v-587</a>
+                            <a href="#" class="item">VX:18611601393</a>
                             <a href="#" class="item">QQ:2793989872</a>
                         </div>
                     </div>
@@ -64,11 +64,11 @@
                         <h4 class="ui inverted header m-text-thin m-text-spaced">Bolg</h4>
                         <p class="m-text-thin m-text-spaced m-opacity-mini">这是我的第一个博客，欢迎您批评指正！！！</p>
                         <br>
-                        <a href="http://blog.wxybyr.cloud" class="item" target="_blank">前台展示</a>
+                        <a href="http://82.157.117.195:8080/" class="item" target="_blank">前台展示</a>
                     </div>
                 </div>
                 <div class="ui inverted section divider"></div>
-                <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright 2020-2021 Designed By wxy</p>
+                <p class="m-text-thin m-text-spaced m-opacity-tiny">Copyright 2020-2021 Designed By Wxy</p>
             </div>
 
         </footer>
